gccida/g0/save_stack_pointer
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/save_stack_pointer/src/stmt.c:4317:3: error: use of undeclared identifier 'save_level'; did you mean 'save_expr'?
( save_level)( thisblock->next == 0LL), 
  ^~~~~~~~~~
  save_expr
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/save_stack_pointer/src/tree.h:2528:13: note: 'save_expr' declared here
extern tree save_expr                   PARAMS ((tree));
            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/save_stack_pointer/src/obj/stmt.o] Error 1
